# blackhole

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  azure-pipelines.yml  install.sh  justfile
.github/: dependabot.yml  main.workflow
.github/workflows/: container.yaml  coverage.yaml  release.yaml  tag.yaml  test.yaml
benches/: benchmark.rs
src/: access_log.rs  args.rs  fs.rs  lib.rs  logger.rs  main.rs  middleware.rs  server.rs
