[package]
name        = "blackhole-bin"
version     = "0.3.0"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "benches/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2018"
license     = "MIT/Apache-2.0"
description = "blackhole is a server that responds to any request with http status code 200"
repository  = "https://github.com/watawuwu/blackhole"
keywords    = ["server", "mock", "dev"]
categories  = ["command-line-utilities"]

[[bin]]
name = "blackhole"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/blackhole", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/blackhole", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
anyhow            = "1.0"
structopt         = "0.3"
exitcode          = "1.1"
log               = "0.4"
pretty_env_logger = "0.4"
chrono            = { version = "0.4", features = ["serde"] }
ansi_term         = "0.12"
warp              = "0.1"
serde             = "1.0"
serde_json        = "1.0"

[dev-dependencies]
tempdir    = "0.3"

[features]
default = []
