[package]
name        = "blackhole-bin"
version     = "0.4.1"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2018"
license     = "MIT OR Apache-2.0"
description = "blackhole is a server that responds to any request with http status code 200"
repository  = "https://github.com/watawuwu/blackhole"
keywords    = ["server", "mock", "dev"]
categories  = ["command-line-utilities"]

[[bin]]
name = "blackhole"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/blackhole", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/blackhole", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
anyhow            = "1.0"
structopt         = "0.3"
exitcode          = "1.1"
log               = "0.4"
chrono            = { version = "0.4", features = ["serde"] }
tide              = "0.11"
# [workaround] tide 0.10 dep http-types 2.1, but http-types has bub
http-types        = "2.3"
async-std         = { version = "1.6", features = ["attributes"] }
serde             = "1.0"
serde_json        = "1.0"
time              = "0.2"
colored_json      = "2.1"
json-color        = "0.7"
fern              = "0.6"
paw               = "1.0"
paw-structopt     = "1.0"
clap_flags        = "0.5"
openssl-sys       = "0.9"
# [workaround] issue #3
aes-gcm           = "0.6"

[features]
default = ["vendored"]
vendored = ["openssl-sys/vendored"]

[dev-dependencies]
tempfile    = "3.1"
assert_cmd  = "1.0"
predicates  = "1.0"
console     = "0.11"
surf        = "1.0"
criterion   = "0.3"
futures     = "0.3"
