[package]
name        = "blackhole-bin"
version     = "0.6.1"
authors     = ["Wataru Matsui <watawuwu@3bi.tech>"]
exclude     = ["examples/*", "tests/*", "*.png", "perf/*", "assets", "Makefile", "tmp.rs"]
readme      = "README.md"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "blackhole is a server that responds to any request with http status code 200"
repository  = "https://github.com/watawuwu/blackhole"
keywords    = ["server", "mock", "dev"]
categories  = ["command-line-utilities"]

[[bin]]
name = "blackhole"
path = "src/main.rs"

[badges]
is-it-maintained-issue-resolution = { repository = "watawuwu/blackhole", service = "github" }
is-it-maintained-open-issues      = { repository = "watawuwu/blackhole", service = "github" }
maintenance                       = { status = "passively-maintained" }

[dependencies]
anyhow                = "1.0"
clap                  = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag   = "2"
exitcode              = "1.1"
log                   = "0.4"
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = "1.0"
time                  = { version = "0.3", features = ["serde", "macros"] }
colored_json          = "3.2"
fern                  = "0.6"
signal-hook           = "0.3"
signal-hook-tokio     = { version = "0.3", features = ["futures-v0_3"] }
actix-web             = "4"
tokio                 = { version = "1", features = ["full"]}
futures-util          = "0.3"
